--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a>
+        <a href="recipes/italian-chicken-marinade.html" alt="Italian chicken marinade">Italian Chicken Marinade</a>
     </body>
 </html>
