--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/italian-chicken-marinade.html" alt="Italian chicken marinade">Italian Chicken Marinade</a>
+        <ul>
+            <li><a href="recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a></li>
+            <li><a href="recipes/grilled-asparagus.html">Grilled Asparagus</a></li>
+        </ul>
     </body>
 </html>
