--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Italian Chicken Marinade</h1>
-        <img src="../images/chicken.webp">
+        <img src="../images/chicken.webp" alt="Italian chicken marinade">
 
         <h2>Description</h2>
         <p>This Italian dressing chicken marinade is a super simple but delicious way to add flavor before grilling.</p>
