--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a></li>
             <li><a href="recipes/grilled-asparagus.html">Grilled Asparagus</a></li>
+            <li><a href="recipes/marinated-grilled-pork-tenderloin.html">Marinated Grilled Pork Tenderloin</a></li>
         </ul>
     </body>
 </html>
